Add docker build to Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ sudo: required
 
 services:
   - docker
+
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USER" -p="$DOCKER_PASSWORD";
+    ./build.sh;
+    ./push.sh;
+    fi
